<resources>
    <string name="app_name">Floating Apps</string>
    <string name="floating_pdf">Floating PDF</string>
    <string name="floating_calc">Floating Calculator</string>
    <string name="floating_bible">Floating Bible</string>
    <string name="floating_clicker">Floating Clicker</string>
    <string name="floating_clicker_description">Allows Floating Clicker to tap points on your screen that are controlled by a paired device over Bluetooth.</string>
    
    <string name="path_hint">Path to PDF File</string>
    <string name="browse_files">Browse Files</string>
    <string name="select_file">Select File</string>
    <string name="ok">OK</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="swipe">Swipe</string>
    <string name="swipe_cancel">Cancel swipe</string>
    <string name="swipe_pick_start">Swipe: tap the point to start at</string>
    <string name="swipe_pick_end">Now tap the point to swipe to</string>
    <string name="swipe_need_two">Pick two different points to swipe between</string>
    <string name="open">Open</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="finish">Finish</string>
    <string name="back">Back</string>
    <string name="exit">Exit</string>
    <string name="grant">Grant</string>
    <string name="send">Send</string>
    <string name="reason">\nReason: %1$s</string>
    <string name="loading">Loading...</string>
    <string name="send_message">Send Message</string>
    <string name="folder_icon">Folder Icon</string>
    <string name="invalid_syntax">Invalid Syntax</string>
    
    <string name="asHost">Start as Host</string>
    <string name="asGuest">Connect as Guest</string>
    <string name="select_connect_mode">Select Connect Mode</string>
    <string name="asController">Continue as Device Clicker</string>
    <string name="asService">Continue as Clicked Device</string>
    <string name="select_clicker_mode">Select Clicker Mode</string>
    <string name="connect_through_bluetooth">Connect through Bluetooth</string>
    <string name="activate_service">Activate Service</string>
    <string name="device_disconnected">Device Disconnected</string>
    <string name="device_disconnected_message">The remote device has ended the connection, and the session is no longer active. You can try reconnecting to resume the session.</string>
    <string name="activate_service_message">Please turn on Floating Clicker in Accessibility Settings. If it is on, turn it off and turn it on again.</string>
    <string name="clicker_uuid">1cf64473-3259-4cb7-8f91-5ebb341506cd</string>
    
    <string name="grant_permissions">Grant Permissions</string>
    <string name="incorrect_format_message">Are you sure this is a %1$s file?</string>
    <string name="display_permission_message">For this app to work, you need to grant display over other apps permission.</string>
    <string name="waiting_for_connection">Waiting for connection...</string>
    <string name="connecting">Connecting...</string>
    <string name="no_paired_devices">No paired Bluetooth devices found. Pair the other device in your system Bluetooth settings first, then come back here.</string>
    <string name="clicker_no_gestures">This service cannot perform taps. Turn Floating Clicker off and on again in Accessibility settings.</string>
    <string name="clicker_service_failed">Could not show the clicker controls. Check that the Floating Clicker accessibility service is enabled.</string>
    <string name="clicker_service_starting">Waiting for the Floating Clicker accessibility service to start...</string>
    <string name="null_socket">Bluetooth Socket is not available</string>
    <string name="bluetooth_not_supported">This feature is not supported on this device.</string>
    <string name="activate_bluetooth">For this feature to work, you need to activate Bluetooth.</string>
    <string name="bluetooth_permission_needed">Please grant Nearby Devices permission so that this app will be able to use Bluetooth.</string>
    <string name="enable_bluetooth">Please turn on Bluetooth for this feature to work.</string>
    <string name="files_permission_message">For this app to work, you need to grant read and write permission.</string>
    <string name="bluetooth_error_occurred">An error occurred while trying to use Bluetooth. Please try again.</string>
    <string name="permission_denied_grant_manually">This app cannot request your permission. The app won\'t work unless you grant it in Setttings.</string>
    <string name="invalid_path_message">Please enter a valid file path in the text field.</string>
    <string name="file_load_error">Enter a valid path and grant permissions.</string>
    <string name="file_read_error">Error loading PDF file.</string>
    <string name="delete_file_confirm">Are you sure you want to delete this file?</string>
    <string name="delete_file_error">Failed to delete file</string>
    <string name="null_pdf_error">Select a pdf file to open before starting.</string>
    <string name="pdf_page_error">Can\'t open the pdf file, issue with paging.</string>
    <string name="save_page_error">Couldn\'t save current page</string>
    <string name="invalid_page_number">Enter a valid page number.</string>
    <string name="ignore_battery_optimization">For this app to always continue working, you need to turn off battery optimization for this app.</string>
    <string name="floating_timer">Floating Timer</string>
    <string name="close_timer">Close Timer</string>
    <string name="minimize_timer">Minimize Timer</string>
    <string name="launch_app">Launch App</string>
    <string name="pdf_not_supported">Sorry, PDF Reader is only available on phones running Android 5 and higher.</string>
    <string name="new_timer">New Timer</string>
    <string name="schedule_repeating_timer">Schedule repeating Timer</string>
    <string name="schedule_timer">Schedule Timer</string>
    <string name="collapsed_calculator_icon">Collapsed Calculator Icon</string>
    <string name="calculator_history">Calculator History</string>
    <string name="clear_calc_text">CLR</string>
    <string name="minimize_calc">Minimize Calculator</string>
    <string name="del">DEL</string>
    <string name="close_calc">Close Calculator</string>
    <string name="close_pdf">Close Floating PDF</string>
    <string name="previous_page">Previous Page</string>
    <string name="next_page">Next Page</string>
    <string name="zoom_in">Zoom in</string>
    <string name="zoom_out">Zoom out</string>
    <string name="pdf_page">PDF Page</string>
    <string name="collapsed_pdf_page">Collapsed PDF Page</string>
    <string name="pdf_logo">PDF Logo</string>
    <string name="calculator_logo">Calculator Logo</string>
    <string name="bible_logo">Bible Logo</string>
    <string name="timer_logo">Timer Logo</string>
    <string name="minimize_bible">Minimize Bible</string>
    <string name="close_bible">Close Bible</string>
    <string name="minimize_pdf">Minimize PDF</string>
    <string name="caret_right">Move Caret to the Right</string>
    <string name="caret_left">Move caret to the left</string>
    <string name="clear">Clear</string>
    <string name="maximize_timer">Maximize Timer</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="floating_music_player">Floating Music Player</string>
    <string name="to_power">Raised to power</string>
    <string name="floating_music_coming">Floating Music is coming soon.</string>
    <string name="floating_copy_text_field">Clipboard Copy</string>
    <string name="floating_web_browser">Floating Web Browser</string>
    <string name="floating_copy_text_coming">Input text into a floating text field and copy to clipboard is coming soon.</string>
    <string name="floating_browser_coming">Floating Browser is coming soon.</string>

    <string name="activate_display_over_app_message">Select Floating Apps in the list, and turn on the checkbox for Allow display over other apps</string>
    <string name="blue">Blue</string>
    <string name="caption_color">Caption Color</string>
    <string name="caption_settings">Caption Settings</string>
    <string name="captions_size">Captions Size</string>
    <string name="choose_app_to_open">Choose an app to open with.</string>
    <string name="choose_music_folder_msg">Manage directories where music is found</string>
    <string name="clear_history">Clear history</string>
    <string name="close_captions">Close Captions</string>
    <string name="close_field">Close Text Copy</string>
    <string name="collapsed_captions_settings">Collapsed Captions Settings</string>
    <string name="collapsed_notes">Collapsed Notes</string>
    <string name="copy">Copy</string>
    <string name="directory_not_exist">Choose a folder that exists, and not a file.</string>
    <string name="enter_file_path">Enter File Path</string>
    <string name="enter_keyword">Enter keyword</string>
    <string name="error_occurred">An error occurred</string>
    <string name="music_playback_failed">Couldn\'t play %1$s: %2$s</string>
    <string name="music_needs_permission">Floating Music needs permission to read audio files. Grant it, then try again.</string>
    <string name="fast_backward">Fast Backward</string>
    <string name="fast_forward">Fast Forward</string>
    <string name="file_name">file_name</string>
    <string name="floating_captions">Floating Captions</string>
    <string name="floating_notes">Floating Notes</string>
    <string name="green">Green</string>
    <string name="insert_at_cursor_position">Insert at cursor position</string>
    <string name="manage_files_permission_message">For this app to work, you need to grant management of all files permission.</string>
    <string name="minimize_captions_settings">Minimize Captions Settings</string>
    <string name="no_app_to_open_pdf">No app is available to open this PDF File</string>
    <string name="open_caption_settings">Open Caption Settings</string>
    <string name="open_in_app">Open in another app</string>
    <string name="pause_captions">Pause captions when opening captions settings</string>
    <string name="play">Play</string>
    <string name="red">Red</string>
    <string name="remove_from_history">Remove from History</string>
    <string name="sample_text">Sample Text</string>
    <string name="search_files">Search Files</string>
    <string name="show_in_calculator">Show in Calculator</string>
    <string name="start">Start</string>
    <string name="start_captions">Start Captions</string>
    <string name="toggle_focus">Toggle Focus</string>
</resources>
