<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:id="@+id/root_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/collapsed"
            android:visibility="visible"
            android:layout_width="60dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_gravity="center_vertical"
                android:id="@+id/expand_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/pdf_logo"
                android:contentDescription="@string/collapsed_pdf_page"/>
        </LinearLayout>
        <RelativeLayout
            android:orientation="horizontal"
            android:id="@+id/expanded"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/windowControls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="horizontal"
                    android:background="@color/buttonColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true">
                    <ImageView
                        android:layout_gravity="center_vertical"
                        android:id="@+id/launchApp"
                        android:padding="5sp"
                        android:layout_width="30sp"
                        android:layout_height="30sp"
                        android:src="@drawable/launch_app"
                        android:contentDescription="@string/launch_app"
                        android:layout_marginStart="10sp"
                        android:layout_marginEnd="5sp"/>
                    <ImageView
                        android:layout_gravity="center_vertical"
                        android:id="@+id/toggleFocus"
                        android:padding="5sp"
                        android:layout_width="30sp"
                        android:layout_height="30sp"
                        android:src="@drawable/focus_on"
                        android:contentDescription="@string/toggle_focus"
                        android:layout_marginStart="5sp"
                        android:layout_marginEnd="10sp"/>
                    <ImageView
                        android:layout_gravity="center_vertical"
                        android:id="@+id/openInApp"
                        android:padding="5sp"
                        android:layout_width="30sp"
                        android:layout_height="30sp"
                        android:src="@drawable/open_in"
                        android:contentDescription="@string/open_in_app"
                        android:layout_marginStart="5sp"
                        android:layout_marginEnd="10sp"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:background="@color/buttonColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true">
                    <ImageView
                        android:layout_gravity="center_vertical"
                        android:id="@+id/minimizePDF"
                        android:padding="5sp"
                        android:layout_width="30sp"
                        android:layout_height="30sp"
                        android:src="@drawable/minimize_icon"
                        android:contentDescription="@string/minimize_pdf"
                        android:layout_marginStart="10sp"
                        android:layout_marginEnd="5sp"/>
                    <ImageButton
                        android:layout_gravity="center_vertical"
                        android:id="@+id/collapseButton"
                        android:background="@color/buttonColor"
                        android:padding="5sp"
                        android:layout_width="30sp"
                        android:layout_height="30sp"
                        android:src="@android:drawable/ic_delete"
                        android:contentDescription="@string/close_pdf"
                        android:layout_marginStart="5sp"
                        android:layout_marginEnd="10sp"/>
                </LinearLayout>
            </RelativeLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/topNav"
                android:background="@color/buttonColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/windowControls">
                <Button
                    android:id="@+id/prev_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="&lt;"
                    android:layout_weight="1"
                    android:contentDescription="@string/previous_page"/>
                <Button
                    android:id="@+id/next_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="&gt;"
                    android:layout_weight="1"
                    android:contentDescription="@string/next_page"/>
                <EditText
                    android:id="@+id/page_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="Page"
                    android:layout_weight="1.5"
                    android:inputType="number"
                    android:imeOptions="actionGo"
                    android:textAlignment="center"/>
                <Button
                    android:layout_gravity="center_vertical"
                    android:id="@+id/page_count"
                    android:background="@color/buttonColor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text=" / 0"
                    android:layout_weight="1.5"/>
                <Button
                    android:id="@+id/zoomout_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:layout_weight="1"
                    android:contentDescription="@string/zoom_out"
                    android:layout_marginStart="20dp"/>
                <Button
                    android:id="@+id/zoomin_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="+"
                    android:layout_weight="1"
                    android:contentDescription="@string/zoom_in"/>
            </LinearLayout>
            <ScrollView
                android:id="@+id/imageScrollView"
                android:background="#cccccc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/topNav">
                <HorizontalScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/pdf_page"
                        android:background="#ffffff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/pdf_page"/>
                </HorizontalScrollView>
            </ScrollView>
        </RelativeLayout>
    </RelativeLayout>
</FrameLayout>
