<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/collapsed_field"
        android:background="@android:color/white"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:src="@drawable/copy_logo"
        android:contentDescription="@string/collapsed_notes"/>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/expanded_field"
        android:background="@color/copyFromFieldBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/windowControls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:background="@color/buttonColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true">
                <ImageView
                    android:layout_gravity="center_vertical"
                    android:id="@+id/launch_app"
                    android:padding="5sp"
                    android:layout_width="30sp"
                    android:layout_height="30sp"
                    android:src="@drawable/launch_app"
                    android:contentDescription="@string/launch_app"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="5sp"/>
                <ImageView
                    android:layout_gravity="center_vertical"
                    android:id="@+id/toggle_focus"
                    android:padding="5sp"
                    android:layout_width="30sp"
                    android:layout_height="30sp"
                    android:src="@drawable/focus_on"
                    android:contentDescription="@string/toggle_focus"
                    android:layout_marginStart="5sp"
                    android:layout_marginEnd="10sp"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:background="@color/buttonColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true">
                <ImageView
                    android:layout_gravity="center_vertical"
                    android:id="@+id/minimize_field"
                    android:padding="5sp"
                    android:layout_width="30sp"
                    android:layout_height="30sp"
                    android:src="@drawable/minimize_icon"
                    android:contentDescription="@string/minimize_pdf"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="5sp"/>
                <ImageButton
                    android:layout_gravity="center_vertical"
                    android:id="@+id/close_field"
                    android:background="@color/buttonColor"
                    android:padding="5sp"
                    android:layout_width="30sp"
                    android:layout_height="30sp"
                    android:src="@android:drawable/ic_delete"
                    android:contentDescription="@string/close_field"
                    android:layout_marginStart="5sp"
                    android:layout_marginEnd="10sp"/>
            </LinearLayout>
        </RelativeLayout>
        <EditText
            android:textColor="@color/copyFromFieldText"
            android:id="@+id/copy_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"/>
        <Button
            android:id="@+id/copy_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/copy"/>
    </LinearLayout>
</RelativeLayout>
